# llm-auto-optimizer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  KAFKA_SINK_SUMMARY.md  PHASE_2B_INFRA_INTEGRATION_REPORT.md  POSTGRES_IMPLEMENTATION_SUMMARY.md  README.md  cloudbuild.yaml  config.example.yaml  docker-compose.yml  package.json  tsconfig.json
crates/benchmarks/: Cargo.toml
crates/benchmarks/src/: io.rs  lib.rs  markdown.rs  result.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/processor/: ARCHITECTURE.md  Cargo.toml  DEDUPLICATION_CONFIG_QUICK_START.md  DEDUPLICATION_IMPLEMENTATION_SUMMARY.md  DEDUPLICATION_INTEGRATION_SUMMARY.md  DISTRIBUTED_STATE_GUIDE.md  FILE_STRUCTURE.txt  IMPLEMENTATION_SUMMARY.md  KAFKA_SINK_IMPLEMENTATION.md  METRICS_VALIDATION_CHECKLIST.md  NORMALIZATION_IMPLEMENTATION.md  NORMALIZATION_INTEGRATION.md  POSTGRESQL_ENHANCED.md  POSTGRES_QUICKSTART.md  PROMETHEUS_METRICS_IMPLEMENTATION.md  README.md  README_POSTGRES_BACKEND.md  STATE_MANAGEMENT_README.md  STATE_MODULE_SUMMARY.md  STREAM_PROCESSOR.md  TELEMETRY_GUIDE.md  TELEMETRY_IMPLEMENTATION.md  WATERMARK_IMPLEMENTATION_SUMMARY.md  WATERMARK_INTEGRATION_GUIDE.md  WATERMARK_QUICK_REFERENCE.md  WATERMARK_README.md  config.postgres.example.yaml  docker-compose.telemetry.yml
crates/processor/benches/: cached_backend_bench.rs  kafka_sink_benchmark.rs  postgres_backend_bench.rs  sled_compression_bench.rs  stream_processor_bench.rs
crates/processor/examples/: advanced_deduplication.rs  aggregation_demo.rs  cached_state_demo.rs  distributed_lock_demo.rs  distributed_state_demo.rs  docker-compose.postgres.yml  event_deduplication_demo.rs  kafka_pipeline.rs  kafka_sink_example.rs  kafka_source.rs  metrics_example.rs  multi_key_sliding_window.rs  normalization_example.rs  pipeline_example.rs  postgres_enhanced_demo.rs  postgres_state_backend.rs  postgres_state_demo.rs  redis_distributed_state.rs  redis_state_backend.rs  redis_state_demo.rs  state_demo.rs  state_ha_demo.rs  stream_processor_demo.rs  stream_processor_state_complete.rs  telemetry_demo.rs  tiered_cache_demo.rs  watermark_demo.rs
crates/processor/migrations/: 001_create_state_table.sql  002_add_indexes.sql  003_enhanced_features.sql
crates/processor/src/: config.rs  core.rs  error.rs  lib.rs  stream_processor.rs  watermark.rs
crates/processor/telemetry-config/: grafana-datasources.yml  otel-collector-config.yaml  prometheus.yml
crates/processor/tests/: DEDUPLICATION_TESTS_EXECUTIVE_SUMMARY.md  DEDUPLICATION_TESTS_README.md  DEDUPLICATION_TEST_QUICK_REFERENCE.md  DEDUPLICATION_VALIDATION_SUMMARY.md  DELIVERY_SUMMARY.txt  README.md  (+22 more)
npm/: README.md  (+6 more)
(+396 files in other folders)
