[package]
name = "llm-optimizer-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical benchmark interface for LLM Auto-Optimizer"

[dependencies]
# Internal crates
llm-optimizer-types = { workspace = true }
llm-optimizer-decision = { workspace = true }
llm-optimizer-processor = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Tracing
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
